--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "typescript": "^3.7.5"
   },
   "devDependencies": {
@@ -21,7 +22,10 @@
     "@typescript-eslint/parser": "^2.16.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-config-react": "^1.1.7",
+    "eslint-import-resolver-parcel": "^1.10.1",
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^1.19.1"
+    "parcel": "^1.12.4",
+    "prettier": "^1.19.1",
+    "styled-components": "^5.0.0"
   }
 }
