--- a/package.json
+++ b/package.json
@@ -11,21 +11,24 @@
   "author": "Jon Higgins",
   "license": "ISC",
   "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "typescript": "^3.7.5"
+    "eslint": "^7.2.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "typescript": "^3.9.5"
   },
   "devDependencies": {
-    "@types/react": "^16.9.17",
-    "@typescript-eslint/eslint-plugin": "^2.16.0",
-    "@typescript-eslint/parser": "^2.16.0",
-    "eslint-config-prettier": "^6.9.0",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react": "^16.9.35",
+    "@types/react-router": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-config-react": "^1.1.7",
-    "eslint-import-resolver-parcel": "^1.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-import-resolver-parcel": "^1.10.4",
+    "eslint-plugin-prettier": "^3.1.3",
     "parcel": "^1.12.4",
     "prettier": "^1.19.1",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.1.1"
   }
 }
