--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,16 @@
 {
   "compilerOptions": {
     "jsx": "react",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
     "baseUrl": "./src",
     "paths": {
       "~*": ["./*"]
-    }
+    },
+    "typeRoots": [
+        "./node_modules/@types"
+    ]
   },
   "include": ["src/**/*", "custom.d.ts"]
 }
