--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "Jon Higgins",
   "license": "ISC",
   "dependencies": {
+    "@types/hammerjs": "^2.0.36",
     "eslint": "^7.2.0",
+    "hammerjs": "^2.0.8",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
