--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
   "author": "Jon Higgins",
   "license": "ISC",
   "dependencies": {
-    "@types/hammerjs": "^2.0.36",
     "eslint": "^7.2.0",
-    "hammerjs": "^2.0.8",
+    "framer-motion": "^2.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
